# defi-sentinel

./: .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/defi_sentinel/: __init__.py  agent.py  cli.py
src/defi_sentinel/chains/: __init__.py  base.py  evm.py  registry.py
src/defi_sentinel/inference/: __init__.py  benchmark.py  engine.py  quantize.py
src/defi_sentinel/monitors/: __init__.py
src/defi_sentinel/protocols/: __init__.py
src/defi_sentinel/safety/: __init__.py  killswitch.py  limits.py  simulator.py
tests/: test_chains.py  test_killswitch.py  test_safety.py
