[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defi-sentinel"
version = "0.1.0"
description = "AI-powered DeFi monitoring and automation agent with local LLM inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "santuy69", email = "santuy69@users.noreply.github.com" },
]
keywords = ["defi", "ai-agent", "llm", "blockchain", "web3", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "web3>=7.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "sqlite-utils>=3.36",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
inference = [
    "torch>=2.3",
    "transformers>=4.40",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "protobuf>=5.0",
]
rocm = [
    "torch>=2.3",
    "transformers>=4.40",
    "accelerate>=0.30",
]
gpu-benchmark = [
    "torch>=2.3",
    "transformers>=4.40",
    "pynvml>=12.0",
]

[project.scripts]
sentinel = "defi_sentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/defi_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
